[package]
name = "cakecutter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cakecutter is a utility tool to help you create new projects quickly, from pre-built cakes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
ureq = "0.1.1"